--- a/index.html
+++ b/index.html
@@ -190,25 +190,50 @@
         <h2 class="works__title section-title">Чем мы занимаемся</h2>
         <ul class="works__list list">
           <li class="works__item">
-            <img src="./images/work_place.jpg"
-              alt="Людина друкує , сидячи за двома моніторами, біля клавіатури лежить листок з намальованою блок схемою. "
-              width="370" height="294" class="works__image">
+            <picture class="picture">
+              <source srcset="./images/tablet-hands-des.webp 1x, ./images/tablet-hands-des@2x.webp 2x"
+                media="(min-width: 1200px)" type="image/webp" />
+
+              <source srcset="./images/tablet-hands-des.jpg 1x, ./images/tablet-hands-des@2x.jpg 2x"
+                media="(min-width: 1200px)" />
+
+              <img width="370" height="294" src="./images/tablet-hands-des.jpg"
+                alt="Людина друкує , сидячи за двома моніторами, біля клавіатури лежить листок з намальованою блок схемою.">
+
+            </picture>
+
             <div class="works__description">
               <p> Десктопные приложения </p>
             </div>
           </li>
           <li class="works__item">
-            <img src="./images/app_mobile.jpg"
-              alt="Людина сидить перед ноутбуком на якому відкриті три макети виглядів вікон  на смартфоні , в лівій руці смартфон , права рука на тачпаді мишки."
-              width="370" height="294" class="works__image">
+            <picture class="picture">
+              <source srcset="./images/laptop-des.webp 1x, ./images/laptop-des@2x.webp 2x" media="(min-width: 1200px)"
+                type="image/webp" />
+
+              <source srcset="./images/laptop-des.jpg 1x, ./images/laptop-des@2x.jpg 2x" media="(min-width: 1200px)" />
+
+              <img width="370" height="294" src="./images/laptop-des.jpg"
+                alt="Людина сидить перед ноутбуком на якому відкриті три макети виглядів вікон  на смартфоні , в лівій руці смартфон , права рука на тачпаді мишки.">
+
+            </picture>
+
             <div class="works__description">
               <p> Мобильные приложения </p>
             </div>
           </li>
           <li class="works__item">
-            <img src="./images/colors_gamma.jpg"
-              alt="Людина тримає в руці планшет на екрані якого відображено множину кольорів , множина має вигляд шестикутника та складається з всіх кольорів які розміщені в шестикутнику наче соти(маленкі шестикутнички)"
-              width="370" height="294" class="works__image">
+            <picture class="picture">
+              <source srcset="./images/tablet-hand-des.webp 1x, ./images/tablet-hand-des@2x.webp 2x"
+                media="(min-width: 1200px)" type="image/webp" />
+
+              <source srcset="./images/tablet-hand-des.jpg 1x, ./images/tablet-hand-des@2x.jpg 2x"
+                media="(min-width: 1200px)" />
+
+              <img width="370" height="294" src="./images/tablet-hand-des.jpg"
+                alt="Людина тримає в руці планшет на екрані якого відображено множину кольорів , множина має вигляд шестикутника та складається з всіх кольорів які розміщені в шестикутнику наче соти(маленкі шестикутнички">
+
+            </picture>
             <div class="works__description">
               <p> Дизайнерские решения </p>
             </div>
@@ -223,8 +248,21 @@
         <h2 class="team__title section-title">Наша команда</h2>
         <ul class="team__list list">
           <li class="team__item">
-            <img class="team__image-employee" src="./images/men_1.jpg" alt="фото члена команди:Игорь Демьяненко"
-              width="270" height="260">
+            <picture>
+              <source srcset="./images/igor-des.webp 1x, ./images/igor-des@2x.webp 2x" media="(min-width: 1200px)"
+                type="image/webp" />
+              <source srcset="./images/igor-des.jpg 1x, ./images/igor-des@2x.jpg 2x" media="(min-width: 1200px)" />
+
+              <source srcset="./images/igor-tab.webp 1x, ./images/igor-tab@2x.webp 2x" media="(min-width: 768px)"
+                type="image/webp" />
+              <source srcset="./images/igor-tab.jpg 1x, ./images/igor-tab@2x.jpg 2x" media="(min-width: 768px)" />
+
+              <source srcset="./images/igor-tel.webp 1x, ./images/igor-tel@2x.webp 2x" media="(min-width: 480px)"
+                type="image/webp" />
+              <source srcset="./images/igor-tel.jpg 1x, ./images/igor-tel@2x.jpg 2x" media="(min-width: 480px)" />
+
+              <img class="team__img" src="./images/igor-tab@2x.jpg" alt="фото члена команди:Игорь Демьяненко.">
+            </picture>
             <h3 class="team__name-mamber"> Игорь Демьяненко</h3>
             <p class="team__position">Product Designer</p>
             <ul class="list-media">
@@ -259,8 +297,21 @@
             </ul>
           </li>
           <li class="team__item">
-            <img class="team__image-employee" src="./images/wom_1.jpg" alt="фото члена команди:Ольга Репина" width="270"
-              height="260">
+            <picture>
+              <source srcset="./images/olga-des.webp 1x, ./images/olga-des@2x.webp 2x" media="(min-width: 1200px)"
+                type="image/webp" />
+              <source srcset="./images/olga-des.jpg 1x, ./images/olga-des@2x.jpg 2x" media="(min-width: 1200px)" />
+
+              <source srcset="./images/olga-tab.webp 1x, ./images/olga-tab@2x.webp 2x" media="(min-width: 768px)"
+                type="image/webp" />
+              <source srcset="./images/olga-tab.jpg 1x, ./images/olga-tab@2x.jpg 2x" media="(min-width: 768px)" />
+
+              <source srcset="./images/olga-tel.webp 1x, ./images/olga-tel@2x.webp 2x" media="(min-width: 480px)"
+                type="image/webp" />
+              <source srcset="./images/olga-tel.jpg 1x, ./images/olga-tel@2x.jpg 2x" media="(min-width: 480px)" />
+
+              <img class="team__img" src="./images/olga-tab@2x.jpg" alt="фото члена команди:Ольга Репина.">
+            </picture>
             <h3 class="team__name-mamber"> Ольга Репина </h3>
             <p class="team__position">Frontend Developer</p>
             <ul class="list-media">
@@ -295,8 +346,21 @@
             </ul>
           </li>
           <li class="team__item">
-            <img class="team__image-employee" src="./images/men_2.jpg" alt="фото члена команди:Николай Тарасов"
-              width="270" height="260">
+            <picture>
+              <source srcset="./images/nik-des.webp 1x, ./images/nik-des@2x.webp 2x" media="(min-width: 1200px)"
+                type="image/webp" />
+              <source srcset="./images/nik-des.jpg 1x, ./images/nik-des@2x.jpg 2x" media="(min-width: 1200px)" />
+
+              <source srcset="./images/nik-tab.webp 1x, ./images/nik-tab@2x.webp 2x" media="(min-width: 768px)"
+                type="image/webp" />
+              <source srcset="./images/nik-tab.jpg 1x, ./images/nik-tab@2x.jpg 2x" media="(min-width: 768px)" />
+
+              <source srcset="./images/nik-tel.webp 1x, ./images/nik-tel@2x.webp 2x" media="(min-width: 480px)"
+                type="image/webp" />
+              <source srcset="./images/nik-tel.jpg 1x, ./images/nik-tel@2x.jpg 2x" media="(min-width: 480px)" />
+
+              <img class="team__img" src="./images/nik-tab@2x.jpg" alt="фото члена команди:Николай тарасов.">
+            </picture>
             <h3 class="team__name-mamber"> Николай Тарасов </h3>
             <p class="team__position">Marketing</p>
             <ul class="list-media">
@@ -331,8 +395,21 @@
             </ul>
           </li>
           <li class="team__item">
-            <img class="team__image-employee" src="./images/men_3.jpg" alt=" фото члена команди:Михаил Ермаков"
-              width="270" height="260">
+            <picture>
+              <source srcset="./images/mih-des.webp 1x, ./images/mih-des@2x.webp 2x" media="(min-width: 1200px)"
+                type="image/webp" />
+              <source srcset="./images/mih-des.jpg 1x, ./images/mih-des@2x.jpg 2x" media="(min-width: 1200px)" />
+
+              <source srcset="./images/mih-tab.webp 1x, ./images/mih-tab@2x.webp 2x" media="(min-width: 768px)"
+                type="image/webp" />
+              <source srcset="./images/mih-tab.jpg 1x, ./images/mih-tab@2x.jpg 2x" media="(min-width: 768px)" />
+
+              <source srcset="./images/mih-tel.webp 1x, ./images/mih-tel@2x.webp 2x" media="(min-width: 480px)"
+                type="image/webp" />
+              <source srcset="./images/mih-tel.jpg 1x, ./images/mih-tel@2x.jpg 2x" media="(min-width: 480px)" />
+
+              <img class="team__img" src="./images/mih-tab@2x.jpg" alt="фото члена команди:Михаил Ермаков.">
+            </picture>
             <h3 class="team__name-mamber"> Михаил Ермаков </h3>
             <p class="team__position">UI Designer</p>
             <ul class="list-media">
