--- a/portfolio.html
+++ b/portfolio.html
@@ -72,8 +72,26 @@
 						<a href="#" class="item-lin-portfolio">
 
 							<div class="portfolio-hiden-discription-parent">
-								<img width="370" height="294" src="./images/laptop.jpg" alt="Ноутбук на якому зображено приклад сайту "
-									class="examples-img">
+								<picture>
+									<source srcset="./images/tehnkr-des.webp 1x, ./images/tehnkr-des@2x.webp 2x"
+										media="(min-width: 1200px)" type="image/webp" />
+									<source srcset="./images/tehnkr-des.jpg 1x, ./images/tehnkr-des@2x.jpg 2x"
+										media="(min-width: 1200px)" />
+
+									<source srcset="./images/tehnkr-tab.webp 1x, ./images/tehnkr-tab@2x.webp 2x"
+										media="(min-width: 768px)" type="image/webp" />
+									<source srcset="./images/tehnkr-tab.jpg 1x, ./images/tehnkr-tab@2x.jpg 2x"
+										media="(min-width: 768px)" />
+
+									<source srcset="./images/tehnkr-tel.webp 1x, ./images/tehnkr-tel@2x.webp 2x"
+										media="(min-width: 480px)" type="image/webp" />
+									<source srcset="./images/tehnkr-tel.jpg 1x, ./images/tehnkr-tel@2x.jpg 2x"
+										media="(min-width: 480px)" />
+
+									<img class="portfolio__img" src="./images/tehnkr-tab@2x.jpg"
+										alt="Ноутбук на якому зображено приклад сайту .">
+								</picture>
+
 								<div class="portfolio-hiden-discription-child">
 									<p>Ресурс предлагает комплексные предложения с разным уровнем функционала и
 										сервисов.
@@ -93,8 +111,25 @@
 						<a href="#" class="item-lin-portfolio">
 
 							<div class="portfolio-hiden-discription-parent">
-								<img width="370" height="294" src="./images/basketbol.jpg" alt="плакат з баскетболістами"
-									class="examples-img">
+								<picture>
+									<source srcset="./images/bask-des-des.webp 1x, ./images/bask-des-des@2x.webp 2x"
+										media="(min-width: 1200px)" type="image/webp" />
+									<source srcset="./images/bask-des-des.jpg 1x, ./images/bask-des-des@2x.jpg 2x"
+										media="(min-width: 1200px)" />
+
+									<source srcset="./images/bask-des-tab.webp 1x, ./images/bask-des-tab@2x.webp 2x"
+										media="(min-width: 768px)" type="image/webp" />
+									<source srcset="./images/bask-des-tab.jpg 1x, ./images/bask-des-tab@2x.jpg 2x"
+										media="(min-width: 768px)" />
+
+									<source srcset="./images/bask-des-tel.webp 1x, ./images/bask-des-tel@2x.webp 2x"
+										media="(min-width: 480px)" type="image/webp" />
+									<source srcset="./images/bask-des-tel.jpg 1x, ./images/bask-des-tel@2x.jpg 2x"
+										media="(min-width: 480px)" />
+
+									<img class="portfolio__img" src="./images/bask-des-tab@2x.jpg"
+										alt="фото члена команди:Игорь Демьяненко.">
+								</picture>
 								<div class="portfolio-hiden-discription-child">
 
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
