--- a/portfolio.html
+++ b/portfolio.html
@@ -112,23 +112,20 @@
 
 							<div class="portfolio-hiden-discription-parent">
 								<picture>
-									<source srcset="./images/bask-des-des.webp 1x, ./images/bask-des-des@2x.webp 2x"
-										media="(min-width: 1200px)" type="image/webp" />
-									<source srcset="./images/bask-des-des.jpg 1x, ./images/bask-des-des@2x.jpg 2x"
-										media="(min-width: 1200px)" />
+									<source srcset="./images/bask-des.webp 1x, ./images/bask-des@2x.webp 2x" media="(min-width: 1200px)"
+										type="image/webp" />
+									<source srcset="./images/bask-des.jpg 1x, ./images/bask-des@2x.jpg 2x" media="(min-width: 1200px)" />
 
-									<source srcset="./images/bask-des-tab.webp 1x, ./images/bask-des-tab@2x.webp 2x"
-										media="(min-width: 768px)" type="image/webp" />
-									<source srcset="./images/bask-des-tab.jpg 1x, ./images/bask-des-tab@2x.jpg 2x"
-										media="(min-width: 768px)" />
+									<source srcset="./images/bask-tab.webp 1x, ./images/bask-tab@2x.webp 2x" media="(min-width: 768px)"
+										type="image/webp" />
+									<source srcset="./images/bask-tab.jpg 1x, ./images/bask-tab@2x.jpg 2x" media="(min-width: 768px)" />
 
-									<source srcset="./images/bask-des-tel.webp 1x, ./images/bask-des-tel@2x.webp 2x"
-										media="(min-width: 480px)" type="image/webp" />
-									<source srcset="./images/bask-des-tel.jpg 1x, ./images/bask-des-tel@2x.jpg 2x"
-										media="(min-width: 480px)" />
+									<source srcset="./images/bask-tel.webp 1x, ./images/bask-tel@2x.webp 2x" media="(min-width: 480px)"
+										type="image/webp" />
+									<source srcset="./images/bask-tel.jpg 1x, ./images/bask-tel@2x.jpg 2x" media="(min-width: 480px)" />
 
-									<img class="portfolio__img" src="./images/bask-des-tab@2x.jpg"
-										alt="фото члена команди:Игорь Демьяненко.">
+									<img class="portfolio__img" src="./images/bask-tab@2x.jpg"
+										alt="фото Постера New Orlean vs Golden Star">
 								</picture>
 								<div class="portfolio-hiden-discription-child">
 
@@ -149,8 +146,21 @@
 						<a href="#" class="item-lin-portfolio">
 
 							<div class="portfolio-hiden-discription-parent">
-								<img width="370" height="294" src="./images/fish.jpg" alt="Логотип ресторану'The Seafood'"
-									class="examples-img">
+								<picture>
+									<source srcset="./images/sea-des.webp 1x, ./images/sea-des@2x.webp 2x" media="(min-width: 1200px)"
+										type="image/webp" />
+									<source srcset="./images/sea-des.jpg 1x, ./images/sea-des@2x.jpg 2x" media="(min-width: 1200px)" />
+
+									<source srcset="./images/sea-tab.webp 1x, ./images/sea-tab@2x.webp 2x" media="(min-width: 768px)"
+										type="image/webp" />
+									<source srcset="./images/sea-tab.jpg 1x, ./images/sea-tab@2x.jpg 2x" media="(min-width: 768px)" />
+
+									<source srcset="./images/sea-tel.webp 1x, ./images/sea-tel@2x.webp 2x" media="(min-width: 480px)"
+										type="image/webp" />
+									<source srcset="./images/sea-tel.jpg 1x, ./images/sea-tel@2x.jpg 2x" media="(min-width: 480px)" />
+
+									<img class="portfolio__img" src="./images/sea-tab@2x.jpg" alt="Логотип ресторану'The Seafood'.">
+								</picture>
 								<div class="portfolio-hiden-discription-child">
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
@@ -169,8 +179,22 @@
 						<a href="#" class="item-lin-portfolio">
 
 							<div class="portfolio-hiden-discription-parent">
-								<img width="370" height="294" src="./images/headphones.jpg" alt="Накладні навушники"
-									class="examples-img">
+								<picture>
+									<source srcset="./images/headp-des.webp 1x, ./images/headp-des@2x.webp 2x" media="(min-width: 1200px)"
+										type="image/webp" />
+									<source srcset="./images/headp-des.jpg 1x, ./images/headp-des@2x.jpg 2x"
+										media="(min-width: 1200px)" />
+
+									<source srcset="./images/headp-tab.webp 1x, ./images/headp-tab@2x.webp 2x" media="(min-width: 768px)"
+										type="image/webp" />
+									<source srcset="./images/headp-tab.jpg 1x, ./images/headp-tab@2x.jpg 2x" media="(min-width: 768px)" />
+
+									<source srcset="./images/headp-tel.webp 1x, ./images/headp-tel@2x.webp 2x" media="(min-width: 480px)"
+										type="image/webp" />
+									<source srcset="./images/headp-tel.jpg 1x, ./images/headp-tel@2x.jpg 2x" media="(min-width: 480px)" />
+
+									<img class="portfolio__img" src="./images/headp-tab@2x.jpg" alt="Накладні навушники.">
+								</picture>
 								<div class="portfolio-hiden-discription-child">
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
@@ -189,7 +213,21 @@
 						<a href="#" class="item-lin-portfolio">
 
 							<div class="portfolio-hiden-discription-parent">
-								<img width="370" height="294" src="./images/2-box.jpg" alt="Зображено 2 коробки " class="examples-img">
+								<picture>
+									<source srcset="./images/box2-des.webp 1x, ./images/box2-des@2x.webp 2x" media="(min-width: 1200px)"
+										type="image/webp" />
+									<source srcset="./images/box2-des.jpg 1x, ./images/box2-des@2x.jpg 2x" media="(min-width: 1200px)" />
+
+									<source srcset="./images/box2-tab.webp 1x, ./images/box2-tab@2x.webp 2x" media="(min-width: 768px)"
+										type="image/webp" />
+									<source srcset="./images/box2-tab.jpg 1x, ./images/box2-tab@2x.jpg 2x" media="(min-width: 768px)" />
+
+									<source srcset="./images/box2-tel.webp 1x, ./images/box2-tel@2x.webp 2x" media="(min-width: 480px)"
+										type="image/webp" />
+									<source srcset="./images/box2-tel.jpg 1x, ./images/box2-tel@2x.jpg 2x" media="(min-width: 480px)" />
+
+									<img class="portfolio__img" src="./images/box2-tab@2x.jpg" alt="Зображено 2 коробки.">
+								</picture>
 								<div class="portfolio-hiden-discription-child">
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
@@ -208,8 +246,25 @@
 						<a href="#" class="item-lin-portfolio">
 
 							<div class="portfolio-hiden-discription-parent">
-								<img width="370" height="294" src="./images/monitor.jpg" alt="Монітор з зображеним прикладом сайту"
-									class="examples-img">
+								<picture>
+									<source srcset="./images/monitor-des.webp 1x, ./images/monitor-des@2x.webp 2x"
+										media="(min-width: 1200px)" type="image/webp" />
+									<source srcset="./images/monitor-des.jpg 1x, ./images/monitor-des@2x.jpg 2x"
+										media="(min-width: 1200px)" />
+
+									<source srcset="./images/monitor-tab.webp 1x, ./images/monitor-tab@2x.webp 2x"
+										media="(min-width: 768px)" type="image/webp" />
+									<source srcset="./images/monitor-tab.jpg 1x, ./images/monitor-tab@2x.jpg 2x"
+										media="(min-width: 768px)" />
+
+									<source srcset="./images/monitor-tel.webp 1x, ./images/monitor-tel@2x.webp 2x"
+										media="(min-width: 480px)" type="image/webp" />
+									<source srcset="./images/monitor-tel.jpg 1x, ./images/monitor-tel@2x.jpg 2x"
+										media="(min-width: 480px)" />
+
+									<img class="portfolio__img" src="./images/monitor-tab@2x.jpg"
+										alt="Монітор з зображеним прикладом сайту">
+								</picture>
 								<div class="portfolio-hiden-discription-child">
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
@@ -228,7 +283,24 @@
 						<a href="#" class="item-lin-portfolio">
 
 							<div class="portfolio-hiden-discription-parent">
-								<img width="370" height="294" src="./images/magazine.jpg" alt="відкритий журнал" class="examples-img">
+								<picture>
+									<source srcset="./images/magzine-des.webp 1x, ./images/magzine-des@2x.webp 2x"
+										media="(min-width: 1200px)" type="image/webp" />
+									<source srcset="./images/magzine-des.jpg 1x, ./images/magzine-des@2x.jpg 2x"
+										media="(min-width: 1200px)" />
+
+									<source srcset="./images/magzine-tab.webp 1x, ./images/magzine-tab@2x.webp 2x"
+										media="(min-width: 768px)" type="image/webp" />
+									<source srcset="./images/magzine-tab.jpg 1x, ./images/magzine-tab@2x.jpg 2x"
+										media="(min-width: 768px)" />
+
+									<source srcset="./images/magzine-tel.webp 1x, ./images/magzine-tel@2x.webp 2x"
+										media="(min-width: 480px)" type="image/webp" />
+									<source srcset="./images/magzine-tel.jpg 1x, ./images/magzine-tel@2x.jpg 2x"
+										media="(min-width: 480px)" />
+
+									<img class="portfolio__img" src="./images/magzine-tab@2x.jpg" alt="відкритий журнал">
+								</picture>
 								<div class="portfolio-hiden-discription-child">
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
@@ -247,7 +319,22 @@
 						<a href="#" class="item-lin-portfolio">
 
 							<div class="portfolio-hiden-discription-parent">
-								<img width="370" height="294" src="./images/leable.jpg" alt="Бірка для одягу" class="examples-img">
+								<picture>
+									<source srcset="./images/label-des.webp 1x, ./images/label-des@2x.webp 2x" media="(min-width: 1200px)"
+										type="image/webp" />
+									<source srcset="./images/label-des.jpg 1x, ./images/label-des@2x.jpg 2x"
+										media="(min-width: 1200px)" />
+
+									<source srcset="./images/label-tab.webp 1x, ./images/label-tab@2x.webp 2x" media="(min-width: 768px)"
+										type="image/webp" />
+									<source srcset="./images/label-tab.jpg 1x, ./images/label-tab@2x.jpg 2x" media="(min-width: 768px)" />
+
+									<source srcset="./images/label-tel.webp 1x, ./images/label-tel@2x.webp 2x" media="(min-width: 480px)"
+										type="image/webp" />
+									<source srcset="./images/label-tel.jpg 1x, ./images/label-tel@2x.jpg 2x" media="(min-width: 480px)" />
+
+									<img class="portfolio__img" src="./images/label-tab@2x.jpg" alt="Бірка для одягу">
+								</picture>
 								<div class="portfolio-hiden-discription-child">
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
@@ -266,8 +353,21 @@
 						<a href="#" class="item-lin-portfolio">
 
 							<div class="portfolio-hiden-discription-parent">
-								<img width="370" height="294" src="./images/laptop-hands.jpg" alt="Ноутбук , хтось друкує"
-									class="examples-img">
+								<picture>
+									<source srcset="./images/lapt-des.webp 1x, ./images/lapt-des@2x.webp 2x" media="(min-width: 1200px)"
+										type="image/webp" />
+									<source srcset="./images/lapt-des.jpg 1x, ./images/lapt-des@2x.jpg 2x" media="(min-width: 1200px)" />
+
+									<source srcset="./images/lapt-tab.webp 1x, ./images/lapt-tab@2x.webp 2x" media="(min-width: 768px)"
+										type="image/webp" />
+									<source srcset="./images/lapt-tab.jpg 1x, ./images/lapt-tab@2x.jpg 2x" media="(min-width: 768px)" />
+
+									<source srcset="./images/lapt-tel.webp 1x, ./images/lapt-tel@2x.webp 2x" media="(min-width: 480px)"
+										type="image/webp" />
+									<source srcset="./images/lapt-tel.jpg 1x, ./images/lapt-tel@2x.jpg 2x" media="(min-width: 480px)" />
+
+									<img class="portfolio__img" src="./images/lapt-tab@2x.jpg" alt="Ноутбук , хтось друкує">
+								</picture>
 								<div class="portfolio-hiden-discription-child">
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
