--- a/index.html
+++ b/index.html
@@ -613,7 +613,9 @@
     </div>
   </footer>
   <!-- <script src="./js/modal.js"></script> -->
+
   <script src="./js/mobile-menu.js"></script>
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
