--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
         <nav>
           <ul class="mob-nav__list">
-            <li class="mob-nav__item"><a href="./index.html" class="mob-nav__link">Студия</a></li>
+            <li class="mob-nav__item"><a href="./index.html" class="mob-nav__link mob-nav__link-curent">Студия</a></li>
             <li class="mob-nav__item"><a href="./portfolio.html" class="mob-nav__link">Портфолио</a></li>
             <li class="mob-nav__item"><a href="" class="mob-nav__link">Контакты</a></li>
           </ul>
