--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,8 @@
 					<span class="logo-blue">Web</span>Studio
 				</a>
 				<ul class="site-nav list">
-					<li class="item site-nav__item"><a href="./index.html" class="site-nav__link ">Студия</a>
+					<li class="item site-nav__item"><a href="./index.html"
+							class="site-nav__link site-nav__link_current">Студия</a>
 					</li>
 					<li class="item site-nav__item"><a href="./portfolio.html"
 							class="site-nav__link site-nav__link_current">Портфолио</a></li>
@@ -40,7 +41,7 @@
 						</div>
 					</a>
 				</li>
-				<li class="item">
+				<li class="item contact-list__item">
 					<a class="contact-list__link" href="tel:+380961111111">
 						<div class="contact-list__box">
 							<svg height="16" width="10" class="contact-list__icon">
@@ -51,6 +52,53 @@
 					</a>
 				</li>
 			</ul>
+			<button type="button" class="burger-button" data-menu-open>
+				<svg width="24" height="16" class="burger_icon">
+					<use href="./images/icon.svg#menu"></use>
+				</svg>
+			</button>
+		</div>
+		<!-- розмітка схованого модальної навігації-->
+		<div class="mob-modal " data-menu>
+
+			<div class="mob-nav">
+				<button class="mob-modal__btn" data-menu-close>
+					<svg class="mob-modal__close-icon" width="19" height="19">
+						<use href="./images/icon.svg#hrest"></use>
+					</svg>
+				</button>
+
+				<nav>
+					<ul class="mob-nav__list">
+						<li class="mob-nav__item"><a href="./index.html" class="mob-nav__link">Студия</a></li>
+						<li class="mob-nav__item"><a href="./portfolio.html"
+								class="mob-nav__link  mob-nav__link-curent">Портфолио</a></li>
+						<li class="mob-nav__item"><a href="" class="mob-nav__link">Контакты</a></li>
+					</ul>
+				</nav>
+
+				<div class="mob-box">
+					<ul class="mob-contacts">
+						<li class="mob-contacts__item">
+							<a class="mob-contacts__link_tel" href="tel:+380961111111">
+								+38 096 111 11 11</a>
+						</li>
+						<li class="mob-contacts__item">
+							<a class="mob-contacts__link" href="mailto:info@devstudio.com">
+								info@devstudio.com
+							</a>
+						</li>
+					</ul>
+
+					<ul class="mob-media">
+						<li class="mob-media__item"><a href="" class="mob-media__link">Instagram</a></li>
+						<li class="mob-media__item"><a href="" class="mob-media__link">Twitter</a></li>
+						<li class="mob-media__item"><a href="" class="mob-media__link">Facebook</a></li>
+						<li class="mob-media__item"><a href="" class="mob-media__link">LinkedIn</a></li>
+					</ul>
+				</div>
+
+			</div>
 		</div>
 	</header>
 	<main>
@@ -453,6 +501,8 @@
 			</div>
 		</div>
 	</footer>
+	<script src="./js/mobile-menu.js"></script>
+
 </body>
 
 
