--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,7 @@
 					<span class="logo-blue">Web</span>Studio
 				</a>
 				<ul class="site-nav list">
-					<li class="item site-nav__item"><a href="./index.html"
-							class="site-nav__link site-nav__link_current">Студия</a>
+					<li class="item site-nav__item"><a href="./index.html" class="site-nav__link ">Студия</a>
 					</li>
 					<li class="item site-nav__item"><a href="./portfolio.html"
 							class="site-nav__link site-nav__link_current">Портфолио</a></li>
