--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
 								</picture>
 
 								<div class="portfolio-hiden-discription-child">
-									<p>Ресурс предлагает комплексные предложения с разным уровнем функционала и
+									<p class="overlay-text ">Ресурс предлагает комплексные предложения с разным уровнем функционала и
 										сервисов.
 										Все это позволит посетителю получить
 										исчерпывающие сведения о компании или частном лице.
@@ -176,7 +176,7 @@
 								</picture>
 								<div class="portfolio-hiden-discription-child">
 
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
+									<p class="overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
 										necessitatibus perferendis nobis modi illo eaque deleniti quae numquam ut
 										temporibus!
@@ -209,7 +209,7 @@
 									<img class="portfolio__img" src="./images/sea-tab@2x.jpg" alt="Логотип ресторану'The Seafood'.">
 								</picture>
 								<div class="portfolio-hiden-discription-child">
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
+									<p class="overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
 										necessitatibus perferendis nobis modi illo eaque deleniti quae numquam ut
 										temporibus!
@@ -243,7 +243,7 @@
 									<img class="portfolio__img" src="./images/headp-tab@2x.jpg" alt="Накладні навушники.">
 								</picture>
 								<div class="portfolio-hiden-discription-child">
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
+									<p class="overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
 										necessitatibus perferendis nobis modi illo eaque deleniti quae numquam ut
 										temporibus!
@@ -276,7 +276,7 @@
 									<img class="portfolio__img" src="./images/box2-tab@2x.jpg" alt="Зображено 2 коробки.">
 								</picture>
 								<div class="portfolio-hiden-discription-child">
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
+									<p class="overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
 										necessitatibus perferendis nobis modi illo eaque deleniti quae numquam ut
 										temporibus!
@@ -313,7 +313,7 @@
 										alt="Монітор з зображеним прикладом сайту">
 								</picture>
 								<div class="portfolio-hiden-discription-child">
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
+									<p class="overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
 										necessitatibus perferendis nobis modi illo eaque deleniti quae numquam ut
 										temporibus!
@@ -349,7 +349,7 @@
 									<img class="portfolio__img" src="./images/magzine-tab@2x.jpg" alt="відкритий журнал">
 								</picture>
 								<div class="portfolio-hiden-discription-child">
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
+									<p class="overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
 										necessitatibus perferendis nobis modi illo eaque deleniti quae numquam ut
 										temporibus!
@@ -383,7 +383,7 @@
 									<img class="portfolio__img" src="./images/label-tab@2x.jpg" alt="Бірка для одягу">
 								</picture>
 								<div class="portfolio-hiden-discription-child">
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
+									<p class="overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
 										necessitatibus perferendis nobis modi illo eaque deleniti quae numquam ut
 										temporibus!
@@ -416,7 +416,7 @@
 									<img class="portfolio__img" src="./images/lapt-tab@2x.jpg" alt="Ноутбук , хтось друкує">
 								</picture>
 								<div class="portfolio-hiden-discription-child">
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
+									<p class="overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, omnis beatae
 										velit
 										necessitatibus perferendis nobis modi illo eaque deleniti quae numquam ut
 										temporibus!
